Moved XmpPreferences argument to constructor, applied more ide suggestions